--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,105 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8">
-  <title>UAEGoldPrices</title>
+  <title>أسعار الذهب في الإمارات - UAE Gold Prices | أسعار الذهب اليومية والحاسبات</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- Primary Meta Tags -->
+  <meta name="description" content="تابع أسعار الذهب اليومية في الإمارات العربية المتحدة. احصل على أحدث أسعار الذهب بجميع العيارات (24، 22، 21، 18) مع حاسبة الذهب وتحويل العملات. Gold prices in UAE updated daily.">
+  <meta name="keywords" content="أسعار الذهب, الذهب في الإمارات, سعر الذهب اليوم, gold price UAE, Dubai gold price, gold rate Emirates, حاسبة الذهب, أسعار الذهب دبي, أسعار الذهب أبوظبي, عيار 24, عيار 22, عيار 21, عيار 18, gold calculator, currency converter UAE">
+  <meta name="author" content="UAE Gold Prices">
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+  <meta name="googlebot" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+  <meta name="language" content="Arabic">
+  <meta name="revisit-after" content="1 days">
+  <meta name="rating" content="general">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://goldpriceinemirates.com/">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://goldpriceinemirates.com/">
+  <meta property="og:title" content="أسعار الذهب في الإمارات - UAE Gold Prices">
+  <meta property="og:description" content="تابع أسعار الذهب اليومية في الإمارات العربية المتحدة. احصل على أحدث أسعار الذهب بجميع العيارات مع حاسبة الذهب وتحويل العملات.">
+  <meta property="og:image" content="https://goldpriceinemirates.com/images/logo/logo.webp">
+  <meta property="og:site_name" content="أسعار الذهب في الإمارات">
+  <meta property="og:locale" content="ar_AE">
+  <meta property="og:locale:alternate" content="en_AE">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://goldpriceinemirates.com/">
+  <meta name="twitter:title" content="أسعار الذهب في الإمارات - UAE Gold Prices">
+  <meta name="twitter:description" content="تابع أسعار الذهب اليومية في الإمارات العربية المتحدة. أسعار محدثة يومياً مع حاسبة الذهب.">
+  <meta name="twitter:image" content="https://goldpriceinemirates.com/images/logo/logo.webp">
+  
+  <!-- Geo Tags for UAE -->
+  <meta name="geo.region" content="AE">
+  <meta name="geo.placename" content="United Arab Emirates">
+  <meta name="geo.position" content="25.2048;55.2708">
+  <meta name="ICBM" content="25.2048, 55.2708">
+  
+  <!-- Mobile & PWA -->
+  <meta name="theme-color" content="#D4AF37">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="UAE Gold Prices">
+  <meta name="application-name" content="UAE Gold Prices">
+  <meta name="format-detection" content="telephone=no">
+  
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/logo/logo.webp">
+  
+  <!-- Preconnect to external resources -->
+  <link rel="preconnect" href="https://dashboard.goldpriceinemirates.com" crossorigin>
+  <link rel="dns-prefetch" href="https://dashboard.goldpriceinemirates.com">
+  
   <!-- Preload critical fonts to reduce CLS -->
   <link rel="preload" href="fonts/tajawal/Tajawal-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/tajawal/Tajawal-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  
+  <!-- Structured Data - Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "أسعار الذهب في الإمارات - UAE Gold Prices",
+    "alternateName": "UAE Gold Prices",
+    "url": "https://goldpriceinemirates.com",
+    "logo": "https://goldpriceinemirates.com/images/logo/logo.webp",
+    "description": "موقع متخصص في عرض أسعار الذهب اليومية في الإمارات العربية المتحدة مع حاسبات الذهب والعملات",
+    "sameAs": [],
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "customer service",
+      "areaServed": "AE",
+      "availableLanguage": ["Arabic", "English"]
+    }
+  }
+  </script>
+  
+  <!-- Structured Data - WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "أسعار الذهب في الإمارات",
+    "alternateName": "UAE Gold Prices",
+    "url": "https://goldpriceinemirates.com",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": {
+        "@type": "EntryPoint",
+        "urlTemplate": "https://goldpriceinemirates.com/blogs?search={search_term_string}"
+      },
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
 </head>
 <body>
   <app-root></app-root>
