--- a/src/index.html
+++ b/src/index.html
@@ -64,10 +64,11 @@
   <link rel="preconnect" href="https://dashboard.goldpriceinemirates.com" crossorigin>
   <link rel="dns-prefetch" href="https://dashboard.goldpriceinemirates.com">
 
-  <!-- Preload critical fonts to reduce CLS -->
+  <!-- Preload critical fonts to break the request chain -->
   <link rel="preload" href="fonts/tajawal/Tajawal-Regular.woff2" as="font" type="font/woff2" crossorigin>
-  <!-- <link rel="preload" href="fonts/tajawal/Tajawal-Bold.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="fonts/markazi/MarkaziText-Bold.woff2" as="font" type="font/woff2" crossorigin> -->
+  <link rel="preload" href="fonts/tajawal/Tajawal-Medium.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/tajawal/Tajawal-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/markazi/MarkaziText-Bold.woff2" as="font" type="font/woff2" crossorigin>
 
   <!-- Preload LCP images for faster discovery -->
   <link rel="preload" as="image" href="images/logo/logo.webp" fetchpriority="high" type="image/webp">
