--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,8 @@
   <link rel="preload" href="fonts/tajawal/Tajawal-Regular.woff2" as="font" type="font/woff2" crossorigin>
 
   <!-- Preload LCP images for faster discovery -->
-  <link rel="preload" as="image" href="images/logo/logo.webp" fetchpriority="high" type="image/webp">
-  <link rel="preload" as="image" href="images/hero/hero.webp" fetchpriority="high" type="image/webp">
+  <!-- <link rel="preload" as="image" href="images/logo/logo.webp" fetchpriority="high" type="image/webp"> 
+  <link rel="preload" as="image" href="images/hero/hero.webp" fetchpriority="high" type="image/webp"> -->
 
   <!-- Prefetch home API for faster initial data -->
   <link rel="prefetch" href="https://dashboard.goldpriceinemirates.com/api/home" as="fetch" crossorigin>
